--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
-	<title>tes oop</title>
+	<title>Pokemon</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
